Area do colaborador

--- a/LojaVirtual/appsettings.Development.json
+++ b/LojaVirtual/appsettings.Development.json
@@ -5,5 +5,11 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "Email": {
+    "ServerSMTP": "smtp.mail.yahoo.com",
+    "ServerPort": 587,
+    "Username": "amcr_inf@yahoo.com.br",
+    "Password": ""
   }
 }
